src/main/java/com/githab/openhab/language/things/Things.bnf
{
    parserClass="com.githab.openhab.language.things.parser.ThingsParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Things"
    psiImplClassSuffix="Impl"
    psiPackage="com.githab.openhab.language.things.psi"
    psiImplPackage="com.githab.openhab.language.things.psi.impl"

    elementTypeHolderClass="com.githab.openhab.language.things.psi.ThingsTypes"
    elementTypeClass="com.githab.openhab.language.things.psi.ThingsElementType"
    tokenTypeClass="com.githab.openhab.language.things.psi.ThingsTokenType"

    psiImplUtilClass="com.githab.openhab.language.things.psi.impl.ThingsPsiImplUtil"
}

thingsFile                  ::= things_*
private things_             ::= (thing_item|COMMENT|CRLF)
private binding_id_keyword  ::= BINDING_ID_KEYWORD_TYPE
private type_id_keyword     ::= TYPE_ID_KEYWORD_TYPE
private thing_id_keyword    ::= THING_ID_KEYWORD_TYPE
private binding_type        ::= (binding_id_keyword COLON type_id_keyword COLON thing_id_keyword)
private parameter           ::= (PARAMETER_KEY SEPARATOR PARAMETER_VALUE)
private parameter_list      ::= parameter (COMMA parameter_list)*
thing_item                  ::= THING_KEYWORD_TYPE binding_type (LABEL)? '@'? (LOCATION)? LBRACKET parameter_list RBRACKET
